<resources>
    <string name="Connect_to_server_fail">Connecting Server Failed</string>
    <string name="updateApk_now">Downloading Program</string>
    <string name="updatesoft_right">New Version to Upgrade?</string>
    <string name="remote_call_failed">Transfering Remote Service Failed</string>
    <string name="bank_wire_transfer">Online Bank Transfer</string>
    <string name="bank_transfers">Bank Remittance</string>
    <string name="check_sign_failed">Your order information has been illegally changed.</string>
    <string name="Soft_PackageID">Software Package ID</string>
    <string name="Soft_Package_NAMA">Soft Package Category</string>
    <string name="Type">Type</string>
    <string name="Total_Price">Total Price</string>
    <string name="Amount">Amount</string>
    <string name="RMB">RMB</string>
    <string name="USD">USD</string>
    <string name="HKD">HKD</string>
    <string name="EUR">Euro</string>
    <string name="JPY">JPY</string>
    <string name="GBP">GBP</string>
    <string name="network_exception">Please connect to the network!</string>
    <string name="checked_download">Check download</string>
    <string name="app_name">CRP229</string>
    <string name="action_settings">Settings</string>
    <string name="top_search_bg">Please input make name.</string>
    <string name="left_btn_zhenduan">Diagnose</string>
    <string name="left_btn_db">Maintenance</string>
    <string name="left_btn_kongjian">My Data</string>
    <string name="left_btn_zhixun">"What's New"</string>
    <string name="left_btn_quanzi">Social Circle</string>
    <string name="left_btn_guanli">Account</string>
    <string name="left_btn_gduo">More</string>
    <string name="reputation_text">"1. Do not use the product before reading this CRP229 User Manual.
 2. Do not operate this product during driving to reduce traffic danger due to lack of concentration. Launch shall not be liable for any traffic accident or economic loss arising from the use of this product.
 3. Launch shall not be liable for any direct or indirect damage to the product due to unauthorized modification or adding any component. 
 4. This software is developed by Launch Tech Co., Ltd. Software intellectual property, such as copyright, etc., and all information related with software, contains but not limited to: word description and combination, logo, graph, color, interface design, page table, related data, printing, or electronic documents, etc., are protected by Copyright Law of the People's Republic of China and International Copyright Treaty and other intellectual property laws and regulations. 
 5. Users are not allowed to do reverse engineering, decompile or disassemble to this software, otherwise, it is regarded as infringement, and shall be liable for the consequence arising therefrom. 
 6. Using Software involves internet service and mobile communication service, which may be affected by unstable factors. Users shall be aware of and be liable for the risks of interrupted service or unsatisfying demand due to force majeure, computer virus, hacking attack, unstable system, user location, system shutdown, and any other reasons caused by network, technology, communication connection, etc. Launch shall not be liable to users for failure of sending or receiving message, or receiving or sending message failed due to above mentioned factors.
 7. Launch shall not be liable to users for the economic loss incurred by third parties such as Telecom as a result of communication connection fault, technical problem, network, computer fault, unstable system and caused by any other force majeure. 
 8. Launch is committed to cooperating with related department to repair as soon as the service runs abnormal due to technical fault and other force majeure. But Launch shall not be liable to users for the economic loss arising therefrom. 
 9. The functions are not ensured to run correctly in every situation or meet user's expectation due to the complicated hardware configuration. Software owner shall not be liable to user for any consequence of using this software. 
 10. Software shall not be used to publish, deliver, spread or store any content violating national law, endangering national safety, national unification and social stability, nor to publish, deliver any improper, defaming, whorish, violent and disobeying national laws and regulations content. 
 11. It is regarded that users trust Launch to install the software of his/her own free will and agree with all the clauses in this agreement when users install the software by himself/herself."</string>
    <string name="about_pop_text">"Welcome to use Launch CRP229 software, which is applied for vehicle Diagnose and related service. For more information, please browse our website.

"</string>
    <string name="about_web">"Launch Software
http://mycar.dbscar.com"</string>
    <string name="send">Send</string>
    <string name="not_connected">Please connect with Bluetooth device first!</string>
    <string name="bt_not_enabled_leaving">Bluetooth Not Available</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected:</string>
    <string name="connected">Connected</string>
    <string name="title_not_connected">Not Connected.</string>
    <string name="push_toast">登錄並選擇序列號後可以查看</string>
    <string name="scanning">Scanning Device…</string>
    <string name="select_device">Select device to be connected</string>
    <string name="none_paired">No Matched Device</string>
    <string name="none_found">No Device Found</string>
    <string name="title_paired_devices">Paired Device</string>
    <string name="title_other_devices">Other Available Device</string>
    <string name="button_scan">Scan Device</string>
    <string name="connect">Connection Setting</string>
    <string name="discoverable">Setting Discovered</string>
    <string name="initializeTilte">Message</string>
    <string name="initializeMessage">Initializing…</string>
    <string name="dataDisposeTilte">Message</string>
    <string name="dataDisposeMessage">Data Processing</string>
    <string name="exitBtn">Quit</string>
    <string name="upChannel">Up Channel</string>
    <string name="downChannel">Down Channel</string>
    <string name="exitApp">Are you sure to exit CRP229?</string>
    <string name="exitDynamicDepot">Are you sure to exit Diagnose?</string>
    <string name="enter">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="selectCarVersions">Please select the diagnostic software</string>
    <string name="carType">Make</string>
    <string name="soVersions">Version</string>
    <string name="base_port">Please select connector serial number.</string>
    <string name="base_cn">Chinese</string>
    <string name="base_yz">Asian</string>
    <string name="base_oz">European</string>
    <string name="base_mz">Domestic</string>
    <string name="bluetooth_pair">Bluetooth Pair</string>
    <string name="bluetooth_back">Return</string>
    <string name="bluetooth_restore">Reset</string>
    <string name="bluetooth_seach">Scan Device</string>
    <string name="quanmember">Circle Members (%s persons)</string>
    <string name="circle_data">Circle Data</string>
    <string name="circle_name">Name</string>
    <string name="circle_hoster">Creator</string>
    <string name="circle_condition">Join Condition</string>
    <string name="circle_test">To be verified by creator</string>
    <string name="circle_personal">Private Circle</string>
    <string name="quandata">Circle Data</string>
    <string name="liaotian">Chat</string>
    <string name="host_title">Click to type Circle title</string>
    <string name="circle_describe">Click to type Circle Description</string>
    <string name="check1">No need of verification from creator</string>
    <string name="check2">Need verification from creator</string>
    <string name="host_submit">Submit</string>
    <string name="circle_item_name">Welcome to Landrover</string>
    <string name="circle_item_count">Persons</string>
    <string name="circle_item_hoster">Creator</string>
    <string name="circle_item_host">My Landrover</string>
    <string name="circle_search_text">Search Circle</string>
    <string name="common_circle">Public Circle</string>
    <string name="personal_circle">Private Circle</string>
    <string name="address_text">Address</string>
    <string name="age_text">Age</string>
    <string name="sex_text">Gender</string>
    <string name="info_text">Vehicle Information</string>
    <string name="profession_text">Occupation</string>
    <string name="contact_text">Contact</string>
    <string name="add_friends">Adding Friends</string>
    <string name="siliao">Private Chat</string>
    <string name="circle_message">Message</string>
    <string name="sendBtn">Send</string>
    <string name="search_result">Search Result</string>
    <string name="oneText">DataStream Name</string>
    <string name="twoText">Status</string>
    <string name="threeText">Unit</string>
    <string name="FourText">Protocol Name</string>
    <string name="bgtext">Diagnosis Report</string>
    <string name="operatetext">History</string>
    <string name="buy1text">Shopping Record</string>
    <string name="buy1time">Time</string>
    <string name="buy1address">Address</string>
    <string name="chexing">Check Make</string>
    <string name="diagnose_title">Title</string>
    <string name="diagnose_context">Context</string>
    <string name="diagnose_info_time">Launch new product CCH-100 officially…</string>
    <string name="diagnose_info_chexing">Although feel suitable</string>
    <string name="diagnose_date">20130102</string>
    <string name="diagnose_keyword">Keyword</string>
    <string name="download_software_name">Make</string>
    <string name="download_software_version">Version</string>
    <string name="download_software_status">Not Been Downloaded</string>
    <string name="download_software_title">Diagnose Software Download</string>
    <string name="login_name">User Name</string>
    <string name="login_pwd">Password</string>
    <string name="text_regiser">Register</string>
    <string name="reg_account">Username</string>
    <string name="reg_name">Cellphone Number</string>
    <string name="reg_pwd">Password</string>
    <string name="reg_affirm_pwd">Confirm Password</string>
    <string name="registerbtn">Register and Log In</string>
    <string name="regnotic">Please register and login to select your make.</string>
    <string name="del">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="order_list">Order List</string>
    <string name="order_list_del">Delete Order</string>
    <string name="order_list_finish">Paid Order</string>
    <string name="order_list_none">Unpaid Order</string>
    <string name="data_sex">Gender</string>
    <string name="data_phone">Cellphone Number</string>
    <string name="data_address">Address</string>
    <string name="data_sex1">Male</string>
    <string name="data_sex2">Female</string>
    <string name="data_btn">Submit Information</string>
    <string name="data_birth">Birthday</string>
    <string name="data_email">Email Address</string>
    <string name="modi_data">Modify Personal Information</string>
    <string name="reg_email">Email Address</string>
    <string name="register_CC">Basic Info.</string>
    <string name="last_name">Last Name</string>
    <string name="serial_numbers">Serial No</string>
    <string name="add_draft">Add to Draft Box</string>
    <string name="draft">Draft Box</string>
    <string name="Submit">Submit</string>
    <string name="next_maintenance_mileage">Next service miles</string>
    <string name="client_name">Customer Name</string>
    <string name="back">Back</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="zipname">Zip Code</string>
    <string name="check_info">Check user information</string>
</resources>