<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clickable="true" android:layout_width="-1" android:layout_height="-1">
    <include android:id="@id/main_head" android:layout_width="-1" android:layout_height="-2" layout="@layout/main_head" />
    <RelativeLayout android:id="@id/linear" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="10dp" android:layout_below="@id/main_head">
        <Button android:textColor="@color/white" android:id="@id/backBtn" android:background="@drawable/red_btn_bg" android:layout_width="80dp" android:layout_height="-2" android:layout_marginLeft="5dp" android:text="@string/bluetooth_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18sp" android:textColor="@color/white" android:layout_width="-2" android:layout_height="-2" android:text="@string/order_list" android:layout_centerInParent="true" />
        <Button android:textColor="@color/white" android:id="@id/delectOrder" android:background="@drawable/red_btn_bg" android:layout_width="80dp" android:layout_height="-2" android:text="@string/order_list_del" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="10" android:layout_gravity="10" android:orientation="0" android:id="@id/roomTop" android:background="@color/lightblack" android:layout_width="-1" android:layout_height="45dp" android:layout_marginTop="10dp" android:layout_below="@id/linear">
        <Button android:textColor="@color/lightgray" android:id="@id/paynot" android:background="@color/lightblack" android:layout_width="-1" android:layout_height="-1" android:text="@string/order_list_none" android:layout_weight="1.0" />
        <ImageView android:background="@drawable/linea" android:layout_width="2dp" android:layout_height="-2" />
        <Button android:textColor="@color/lightgray" android:id="@id/payfinish" android:background="@color/lightblack" android:layout_width="-1" android:layout_height="-1" android:text="@string/order_list_finish" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:gravity="1" android:id="@id/bootomBtn" android:visibility="2" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="5dp" android:layout_alignParentBottom="true">
        <Button android:textColor="@color/white" android:id="@id/deleteBtn" android:background="@drawable/red_btn_bg" android:layout_width="-2" android:layout_height="-2" android:text="@string/del" />
        <Button android:textColor="@color/white" android:id="@id/cancel" android:background="@drawable/red_btn_bg" android:layout_width="-2" android:layout_height="-2" android:text="@string/cancel" />
    </LinearLayout>
    <ListView android:id="@id/paylistview" android:layout_width="-1" android:layout_height="-2" android:listSelector="#00000000" android:cacheColorHint="@keyrecord/OWNER_USER" android:divider="#00000000" android:layout_above="@id/bootomBtn" android:layout_below="@id/roomTop" />
</RelativeLayout>
