<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="10" android:orientation="0" android:paddingLeft="10dp" android:paddingTop="5dp" android:paddingRight="10dp" android:paddingBottom="5dp" android:layout_width="-1" android:layout_height="-2">
    <ImageView android:id="@id/item_line" android:background="@drawable/item_line" android:layout_width="-2" android:layout_height="-1" android:contentDescription="@string/app_name" />
    <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="5dp">
        <TextView android:textSize="15sp" android:textColor="@color/white" android:ellipsize="3" android:id="@id/title" android:layout_width="-2" android:layout_height="-2" android:text="@string/diagnose_info_time" android:singleLine="true" />
        <RelativeLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="5dp">
            <TextView android:textSize="12sp" android:textColor="@color/hui1" android:id="@id/time" android:layout_width="-2" android:layout_height="-2" android:text="@string/diagnose_date" android:layout_alignParentRight="true" />
            <TextView android:textSize="12sp" android:textColor="@color/hui1" android:ellipsize="3" android:id="@id/author" android:layout_width="-2" android:layout_height="-2" android:text="@string/diagnose_keyword" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
